--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,9 @@
         <input type="radio" id="male" class="male"/>
         <label for="female">female</label>
         <input type="radio" id="female" class="female"/>
+        <label>firstoption</label>
+        <input type="checkbox" name= checkbox/>
+
         
     </body>
 </html>
