Added agency code

--- a/HTML_Practice/HTML_1st_Dec_Code.html
+++ b/HTML_Practice/HTML_1st_Dec_Code.html
@@ -97,6 +97,12 @@
         <label>female</label>
 
     </form>
+    <br><br>
+    <button>Submit</button>
+    <br>
+    <br>
+    <img style="width: 100px" src="../Images/oleg-shatilov-Hmkl9SB5hHY-unsplash.jpg" 
+    alt="lady" >
 
 
     </body>
